// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio 1`] = `
<label
  class="Radiostyles__Box-oebwjf-2 OmtsL"
>
  <input
    aria-invalid="false"
    class="Radiostyles__Input-oebwjf-3 dfmTSl"
    type="radio"
    value="x"
  />
  <span
    class="Radiostyles__Icon-oebwjf-0 gysarQ"
  />
</label>
`;

exports[`Radio w/ any props 1`] = `
<label
  class="Radiostyles__Box-oebwjf-2 OmtsL className"
  id="id"
  title="title"
>
  <input
    aria-invalid="false"
    class="Radiostyles__Input-oebwjf-3 dfmTSl"
    name="name"
    type="radio"
    value="x"
  />
  <span
    class="Radiostyles__Icon-oebwjf-0 gysarQ"
  />
  <span
    class="Radiostyles__Content-oebwjf-1 bKkGza"
  >
    Label
  </span>
</label>
`;

exports[`Radio w/ checked 1`] = `
Array [
  <label
    class="Radiostyles__Box-oebwjf-2 OmtsL"
  >
    <input
      aria-invalid="false"
      checked=""
      class="Radiostyles__Input-oebwjf-3 dfmTSl"
      name="Radio1"
      type="radio"
      value="x"
    />
    <span
      class="Radiostyles__Icon-oebwjf-0 gysarQ"
    />
    <span
      class="Radiostyles__Content-oebwjf-1 bKkGza"
    >
      Label
    </span>
  </label>,
  <label
    class="Radiostyles__Box-oebwjf-2 OmtsL"
  >
    <input
      aria-invalid="false"
      class="Radiostyles__Input-oebwjf-3 dfmTSl"
      name="Radio2"
      type="radio"
      value="y"
    />
    <span
      class="Radiostyles__Icon-oebwjf-0 gysarQ"
    />
    <span
      class="Radiostyles__Content-oebwjf-1 bKkGza"
    >
      Label
    </span>
  </label>,
]
`;

exports[`Radio w/ checked and disabled 1`] = `
Array [
  <label
    class="Radiostyles__Box-oebwjf-2 npIOB"
    disabled=""
  >
    <input
      aria-invalid="false"
      checked=""
      class="Radiostyles__Input-oebwjf-3 yYQyJ"
      disabled=""
      name="Radio1"
      type="radio"
      value="x"
    />
    <span
      class="Radiostyles__Icon-oebwjf-0 rpUxC"
      disabled=""
    />
    <span
      class="Radiostyles__Content-oebwjf-1 bKkGza"
    >
      Label
    </span>
  </label>,
  <label
    class="Radiostyles__Box-oebwjf-2 OmtsL"
  >
    <input
      aria-invalid="false"
      class="Radiostyles__Input-oebwjf-3 dfmTSl"
      name="Radio2"
      type="radio"
      value="y"
    />
    <span
      class="Radiostyles__Icon-oebwjf-0 gysarQ"
    />
    <span
      class="Radiostyles__Content-oebwjf-1 bKkGza"
    >
      Label
    </span>
  </label>,
]
`;

exports[`Radio w/ disabled 1`] = `
Array [
  <label
    class="Radiostyles__Box-oebwjf-2 npIOB"
    disabled=""
  >
    <input
      aria-invalid="false"
      class="Radiostyles__Input-oebwjf-3 yYQyJ"
      disabled=""
      name="Radio1"
      type="radio"
      value="x"
    />
    <span
      class="Radiostyles__Icon-oebwjf-0 rpUxC"
      disabled=""
    />
    <span
      class="Radiostyles__Content-oebwjf-1 bKkGza"
    >
      Label
    </span>
  </label>,
  <label
    class="Radiostyles__Box-oebwjf-2 OmtsL"
  >
    <input
      aria-invalid="false"
      class="Radiostyles__Input-oebwjf-3 dfmTSl"
      name="Radio2"
      type="radio"
      value="y"
    />
    <span
      class="Radiostyles__Icon-oebwjf-0 gysarQ"
    />
    <span
      class="Radiostyles__Content-oebwjf-1 bKkGza"
    >
      Label
    </span>
  </label>,
]
`;

exports[`Radio w/ invalid 1`] = `
<label
  class="Radiostyles__Box-oebwjf-2 OmtsL"
>
  <input
    aria-invalid="true"
    class="Radiostyles__Input-oebwjf-3 bjGmrm"
    name="Radio1"
    type="radio"
    value="x"
  />
  <span
    class="Radiostyles__Icon-oebwjf-0 beTYGv"
  />
  <span
    class="Radiostyles__Content-oebwjf-1 bKkGza"
  >
    Label
  </span>
</label>
`;

exports[`Radio w/ label 1`] = `
<label
  class="Radiostyles__Box-oebwjf-2 OmtsL"
>
  <input
    aria-invalid="false"
    class="Radiostyles__Input-oebwjf-3 dfmTSl"
    type="radio"
    value="x"
  />
  <span
    class="Radiostyles__Icon-oebwjf-0 gysarQ"
  />
  <span
    class="Radiostyles__Content-oebwjf-1 bKkGza"
  >
    Label
  </span>
</label>
`;

exports[`Radio w/ name 1`] = `
Array [
  <label
    class="Radiostyles__Box-oebwjf-2 OmtsL"
  >
    <input
      aria-invalid="false"
      class="Radiostyles__Input-oebwjf-3 dfmTSl"
      name="Radio1"
      type="radio"
      value="x"
    />
    <span
      class="Radiostyles__Icon-oebwjf-0 gysarQ"
    />
    <span
      class="Radiostyles__Content-oebwjf-1 bKkGza"
    >
      Label
    </span>
  </label>,
  <label
    class="Radiostyles__Box-oebwjf-2 OmtsL"
  >
    <input
      aria-invalid="false"
      class="Radiostyles__Input-oebwjf-3 dfmTSl"
      name="Radio2"
      type="radio"
      value="y"
    />
    <span
      class="Radiostyles__Icon-oebwjf-0 gysarQ"
    />
    <span
      class="Radiostyles__Content-oebwjf-1 bKkGza"
    >
      Label
    </span>
  </label>,
]
`;

exports[`Radio w/ onChange() 1`] = `
<Radiostyles__Box
  disabled={false}
  size="m"
>
  <Radiostyles__Input
    aria-invalid={false}
    checked={false}
    disabled={false}
    name="radio"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="radio"
    value="x"
  />
  <Radiostyles__Icon
    disabled={false}
    size="m"
  />
  <Radiostyles__Content
    size="m"
  >
    Label
  </Radiostyles__Content>
</Radiostyles__Box>
`;

exports[`Radio w/ size: l 1`] = `
<label
  class="Radiostyles__Box-oebwjf-2 OmtsL"
>
  <input
    aria-invalid="false"
    class="Radiostyles__Input-oebwjf-3 dfmTSl"
    type="radio"
    value="x"
  />
  <span
    class="Radiostyles__Icon-oebwjf-0 gnjoPM"
  />
  <span
    class="Radiostyles__Content-oebwjf-1 eNlTGc"
  >
    Label
  </span>
</label>
`;

exports[`Radio w/ size: m 1`] = `
<label
  class="Radiostyles__Box-oebwjf-2 OmtsL"
>
  <input
    aria-invalid="false"
    class="Radiostyles__Input-oebwjf-3 dfmTSl"
    type="radio"
    value="x"
  />
  <span
    class="Radiostyles__Icon-oebwjf-0 gysarQ"
  />
  <span
    class="Radiostyles__Content-oebwjf-1 bKkGza"
  >
    Label
  </span>
</label>
`;

exports[`Radio w/ size: s 1`] = `
<label
  class="Radiostyles__Box-oebwjf-2 OmtsL"
>
  <input
    aria-invalid="false"
    class="Radiostyles__Input-oebwjf-3 dfmTSl"
    type="radio"
    value="x"
  />
  <span
    class="Radiostyles__Icon-oebwjf-0 jiYKjX"
  />
  <span
    class="Radiostyles__Content-oebwjf-1 cpQmyB"
  >
    Label
  </span>
</label>
`;
